--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,6 @@ background-image: url('../public/images/smilingdog.jpg');
 background-repeat: no-repeat;
 background-size: cover;
 }
+
+* {
+font-family: Comfortaa, sans-serif;}
